tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-using-impl-2.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/ex1-return-one-existing-name-if-else-using-impl-2.rs:4:15
   |
LL |    if x > y { x } else { y }
   |               ^ lifetime `'a` required
   |
help: add explicit lifetime `'a` to the type of `x`
   |
LL | fn foo<'a>(x: &'a i32, y: &'a i32) -> &'a i32 {
   |                ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
